--- a/latex/ch4_experiment.tex
+++ b/latex/ch4_experiment.tex
@@ -181,7 +181,7 @@ Finally, the full oracle evaluation on both of these sliCQT parameters are shown
 
 \subsection{xumx-sliCQ neural network}
 
-\subsubsection{Network architecture and training}
+\subsubsection{Learning parameters and training curves}
 
 The training parameters of xumx-sliCQ were kept similar to Open-Unmix and CrossNet-Open-Unmix:
 
