--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -1746,7 +1746,7 @@ doi={10.1109/HPCA.2019.00048}}
 
 @misc{waveunet,
       title={Wave-U-Net: A Multi-Scale Neural Network for End-to-End Audio Source Separation}, 
-      author={Daniel Stoller and Sebastian Ewert and Simon Dixon},
+      author={Stoller, Daniel and Ewert, Sebastian and Dixon, Simon},
       year={2018},
       eprint={1806.03185},
       archivePrefix={arXiv},
@@ -1755,9 +1755,17 @@ doi={10.1109/HPCA.2019.00048}}
 
 @misc{endtoend,
       title={End-to-end music source separation: is it possible in the waveform domain?}, 
-      author={Francesc Lluís and Jordi Pons and Xavier Serra},
+      author={Lluís, Francesc and Pons, Jordo and Serra, Xavier},
       year={2019},
       eprint={1810.12187},
       archivePrefix={arXiv},
       primaryClass={cs.SD}
+}
+
+@article{floss,
+author={Fortunato, Laura and Galassi, Mark},
+year={2021},
+title={The case for free and open source software in research and scholarship},
+journal={Philosophical Transactions of the Royal Society A},
+doi={10.1098/rsta.2020.0079}
 }
