--- a/latex/ch3_methodology.tex
+++ b/latex/ch3_methodology.tex
@@ -646,7 +646,7 @@ The approach in xumx-sliCQ was to add a boolean parameter named \Verb#slicq_wien
 \subsubsection{Defining the convolutional layers}
 \label{sec:convlayers}
 
-The convolutional denoising autoencoder models of \textcite{plumbley1, plumbley2} were used in xumx-sliCQ. In the early experiments, they showed more promising results than the bi-LSTM model. The bi-LSTM model was first adapted to work on each time bucket of the ragged list of the sliCQT, but the longest time resolution (highest frequency bin) was prohibitively slow in both training and inference. Convolutional layers are a simple way of defining 2D time-frequency filters that slide over the 2D time-frequency matrices that correspond to different time buckets of the ragged sliCQT. The diagram in figure \ref{fig:cdaeslicqt} shows how the convolutional layers should be applied to the ragged sliCQT.
+The convolutional denoising autoencoder (CDAE) models of \textcite{plumbley1, plumbley2} were used in xumx-sliCQ. In the early experiments, they showed more promising results than the bi-LSTM model. The bi-LSTM model was first adapted to work on each time bucket of the ragged list of the sliCQT, but the longest time resolution (highest frequency bin) was prohibitively slow in both training and inference. Convolutional layers are a simple way of defining 2D time-frequency filters that slide over the 2D time-frequency matrices that correspond to different time buckets of the ragged sliCQT. The diagram in figure \ref{fig:cdaeslicqt} shows how the convolutional layers should be applied to the ragged sliCQT.
 
 \begin{figure}[ht]
 	\centering
@@ -655,9 +655,108 @@ The convolutional denoising autoencoder models of \textcite{plumbley1, plumbley2
 	\label{fig:cdaeslicqt}
 \end{figure}
 
-The exact parameters and configuration of the convolutional layers will be further described in section \ref{sec:experiment}.
+CDAEs are symmetric: a stack of convolutional layers in the encoder are applied to the input spectrogram to extract spectral audio features with sliding 2D (frequency filter, time filter) kernels. The corresponding reverse stack of transpose convolution (or deconvolution) layer in the decoder use the same size of filter (in reverse order) to grow the feature map back to the original spectrogram. For example, a 2-layer encoder/decoder might consist of the following layers: $\text{Conv}(11,42) \rightarrow \text{Conv}(3,5) \rightarrow \text{TransposeConv}(3,5) \rightarrow \text{TransposeConv}(11,42)$. Figure \ref{fig:convtranspose} shows how a convolutional and transpose convolutional or deconvolutional layer apply inverse operations.
 
-\todo[inline]{fix this section, put more params here}
-In the network, this is achieved with a transpose convolution layer with a kernel size of $(1, 3)$ and a stride of $(1, 2)$ where the first dimension is frequency and the second is time. This means that for each frequency bin, the kernel slides and considers 3 time coefficients to produce 6 time coefficients, which is in essence a learnable inverse operation of the 50\% overlap procedure. 
+\begin{figure}[ht]
+	\centering
+	\includegraphics[width=0.75\textwidth]{./images-neural/convtranspose.png}
+	\caption{Deconvolution operation (\cite{convtranspose})}
+	\label{fig:convtranspose}
+\end{figure}
+
+\textcite{convguide} state that ``images, sound clips and many other similar kinds of data have an intrinsic structure,'' and share the following properties:
+
+\begin{tight_enumerate}
+	\item
+		They are stored as multi-dimensional arrays (e.g. the STFT or sliCQT)
+	\item
+		They feature one or more axes for which ordering matters (e.g., time and frequency for a spectrogram)
+	\item
+		The channel axis is used to access different views of the data (e.g., the left and right channels of a stereo audio track)
+\end{tight_enumerate}
+
+The STFT and sliCQT of stereo (2-channel) music produce a 2-channel spectrogram, such that the total dimensions of the 2D time-frequency spectrogram are $\text{time} \times \text{frequency} \times \text{channel}$. The 2D convolution kernels slide across the spectrograms to learn a feature representation, and the number of output channels determines how many feature maps are created. Using the values from \textcite{plumbley2}, the two layers of convolution in the CDAE of xumx-sliCQ use 25 and 55 channels respectively. This means that the stereo or 2-channel sliCQT first has 25 output feature maps (or channels) computed from the first encoder convolutional layer, and 55 output feature maps from the second encoder convolutional layer, which are reversed in the decoder layer, i.e.: $2 \rightarrow \text{encoder}(25 \rightarrow 55) \rightarrow \text{decoder}(25 \rightarrow 2)$.
+
+The kernel parameters define the size and movement of the 2D convolution kernel in the time and frequency dimensions in each output channel. Besides the kernel size, the kernel has these additional parameters: stride, dilation, and padding (\cite{convguide}). Figure \ref{fig:convdiags} shows the behavior of these different kernel parameters. The stride is the amount by which the kernel moves; a stride larger than one implies \textit{subsampling}, because it dictates how much of the output is retained (\cite{convguide}). The dilation defines ``holes'' or gaps in the kernel to increase the receptive field (\cite{convguide}), which is a cheap way to increase the amount of data points considered in a feature map. The padding defines zeros concatenated to the beginning and end of an axis.
+
+\begin{figure}[ht]
+	\centering
+	\subfloat[2D convolution kernel]{\includegraphics[width=\textwidth]{./images-neural/conv1.png}}\\
+	\subfloat[2D convolution kernel with padding > 0]{\includegraphics[width=\textwidth]{./images-neural/conv2.png}}\\
+	\subfloat[2D convolution kernel with stride > 1]{\includegraphics[width=\textwidth]{./images-neural/conv3.png}}\\
+	\subfloat[2D convolution kernel with dilation > 1]{\includegraphics[width=\textwidth]{./images-neural/conv4.png}}
+	\caption{Different behaviors of kernel parameters (\cite{convguide})}
+	\label{fig:convdiags}
+\end{figure}
+
+Different buckets in the ragged transform may have different dimensions for time and frequency, so the 2D convolution filter sizes are different depending on the input size. The training input is split into 1 second sequences, which is the same sequence size used in both CDAE papers (\cite{plumbley1, plumbley2}). This means that the ragged sliCQT dimensions (frequency bins and time coefficients) for 1 second of audio dictate the maximum size of time and frequency kernel that can be applied in each convolution layer. After each layer, a 2D batch normalization (BN) and nonlinear activation function, specifically the rectified linear unit (ReLU) activation, are applied (\cite{plumbley2}).
+
+Note that after the encoder-decoder layers for the sliCQT, we need to add a ``growth layer.'' This is the inverse of the slice overlap-add procedure with learnable parameters. It uses a transpose convolution layer with a kernel size of $(1, 3)$ and a stride of $(1, 2)$ where the first dimension is frequency and the second is time. This means that for each frequency bin, the kernel slides and considers 3 time coefficients to produce 6 time coefficients. The final activation is a Sigmoid, which is real-valued $\in [0.0, 1.0]$. This makes the network estimate a soft or ratio mask which can then be applied to the input mixed magnitude spectrogram.
+
+The exact parameters and configuration of the convolutional kernels and layers are described in tables \ref{table:convtable1}, \ref{table:convtable2}, \ref{table:convtable3}, \ref{table:convtable4}, and \ref{table:convtable5}. The parameters were initially chosen from the kernel values and layers in \textcite{plumbley1, plumbley2}. The parameters were repeatedly modified in an informal hyperparameter tuning process during my submissions to the ISMIR 2021 Music Demixing Challenge. The various tested networks can be viewed in the submission repository here.\footnote{\url{https://gitlab.aicrowd.com/sevagh/music-demixing-challenge-starter-kit}} The design was also constrained by the time limits of the network inference in the challenge. For example, dilations in the time dimension were chosen to efficiently increase the temporal receptive field on the large-dimensioned sliCQT without slowing down the inference step.
+
+\begin{table}[ht]
+	\centering
+	\begin{tabular}{ |l|l|l| }
+	 \hline
+		\# time coefficients & CDAE layer & Growth layer \\
+	 \hline
+	 \hline
+		$\le 100$ & \makecell[l]{size=7\\stride=1\\dilation=2} & \makecell[l]{size=3\\stride=2\\dilation=1} \\
+	 \hline
+		$> 100$ & \makecell[l]{size=13\\stride=1\\dilation=2} & \makecell[l]{size=3\\stride=2\\dilation=1} \\
+	 \hline
+\end{tabular}
+	\caption{Kernel parameters, time dimension}
+	\label{table:convtable1}
+	\vspace{1em}
+\begin{tabular}{ |l|l|l| }
+	 \hline
+		\# frequency bins & CDAE layer & Growth layer \\
+	 \hline
+	 \hline
+		$\le 10$ & \makecell[l]{size=1\\stride=1\\dilation=1} & \makecell[l]{size=1\\stride=1\\dilation=1} \\
+	 \hline
+		$\ge 10, < 20$ & \makecell[l]{size=3\\stride=1\\dilation=1} & \makecell[l]{size=1\\stride=1\\dilation=1} \\
+	 \hline
+		$\ge 20$ & \makecell[l]{size=5\\stride=1\\dilation=1} & \makecell[l]{size=1\\stride=1\\dilation=1} \\
+	 \hline
+\end{tabular}
+	\caption{Kernel parameters, frequency dimension}
+	\label{table:convtable2}
+	\vspace{1em}
+\begin{tabular}{ |l|l|l|l|l| }
+	 \hline
+		Layer 1 & Layer 2 \\
+	 \hline
+	 \hline
+		Conv2d \makecell[l]{in=2\\out=25}, BN, ReLU & Conv2d \makecell[l]{in=25\\out=55}, BN, ReLU \\
+	 \hline
+\end{tabular}
+	\caption{Encoder layers}
+	\label{table:convtable3}
+	\vspace{1em}
+\begin{tabular}{ |l|l|l|l|l| }
+	 \hline
+		Layer 1 & Layer 2 \\
+	 \hline
+	 \hline
+		ConvTranspose2d \makecell[l]{in=55\\out=25}, BN, ReLU & ConvTranspose2d \makecell[l]{in=25\\out=2}, BN, ReLU \\
+	 \hline
+\end{tabular}
+	\caption{Decoder layers}
+	\label{table:convtable4}
+	\vspace{1em}
+\begin{tabular}{ |l| }
+	 \hline
+		Growth layer \\
+	 \hline
+	 \hline
+		ConvTranspose2d \makecell[l]{in=2\\out=2}, Sigmoid \\
+	 \hline
+\end{tabular}
+	\caption{Growth (inverse 50\% overlap-add) layer}
+	\label{table:convtable5}
+\end{table}
 
 \end{document}
