--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -1769,3 +1769,22 @@ title={The case for free and open source software in research and scholarship},
 journal={Philosophical Transactions of the Royal Society A},
 doi={10.1098/rsta.2020.0079}
 }
+
+@article{convtranspose,
+author = {Gsaxner, Christina and Roth, Peter M. and Wallner, Jürgen and Egger, Jan},
+year = {2019},
+pages = {e0212550},
+title = {Exploit fully automatic low-level segmented PET data for training high-level deep learning algorithms for the corresponding CT data},
+volume = {14},
+journal = {PLOS ONE},
+doi = {10.1371/journal.pone.0212550}
+}
+
+@misc{convguide,
+      title={A guide to convolution arithmetic for deep learning}, 
+      author={Vincent Dumoulin and Francesco Visin},
+      year={2018},
+      eprint={1603.07285},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML}
+}
