--- a/latex/report.tex
+++ b/latex/report.tex
@@ -15,6 +15,7 @@
 \usepackage{wrapfig}
 \usepackage{verbatim}
 \usepackage{listings}
+\usepackage{rotating}
   
 \usepackage{minted}
 \usemintedstyle{github}
